# nxscli-mpl

./: CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
docs/: usage.rst
src/nxscli_mpl/: _animation_common.py  _animation_lifecycle.py  _mpl_manager.py  _plot_api.py  _plot_constants.py  _plot_data.py  _plot_factory.py  _plot_lifecycle.py  _plot_surface.py  _registry.py  animation_mpl.py  ext_commands.py  ext_plugins.py  plot_mpl.py  plugin.py
src/nxscli_mpl/cli/: types.py
src/nxscli_mpl/commands/: _common.py  cmd_ani1.py  cmd_ani2.py  cmd_cap.py  cmd_fft.py  cmd_fft_stream.py  cmd_hist.py  cmd_hist_stream.py  cmd_mpl.py  cmd_polar.py  cmd_polar_stream.py  cmd_xy.py  cmd_xy_stream.py
src/nxscli_mpl/plugins/: _static_common.py  _typed_static.py  _typed_static_strategies.py  _typed_windowed.py  _typed_windowed_strategies.py  _windowed_common.py  animation1.py  animation2.py  capture.py  fft.py  histogram.py  live.py  polar.py  roll.py  snap.py  xy.py
tests/: conftest.py  helpers.py  test_animationmpl.py  test_nxsclimpl.py  test_plotmpl.py
tests/cli/: test_main.py  test_types.py
tests/plugins/: test_animation1.py  test_animation2.py  test_capture.py  test_live.py  test_roll.py  test_snap.py  test_windowed.py
