[build-system]
requires = ["setuptools >= 61.2"]
build-backend = 'setuptools.build_meta'

[project]
name = "nxscli-mpl"
version = "0.0.1"
authors = [{name = "raiden00", email = "raiden00@railab.me"}]
description = "Nxscli Matplotlib extension"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
         "nxscli @ git+https://github.com/railab/nxscli.git",
         "matplotlib>=3.6",
         "click>=8.1"
]

[project.entry-points."nxscli.extensions"]
plugins = "nxscli_mpl.ext_plugins"
commands = "nxscli_mpl.ext_commands"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79