[build-system]
requires = ["setuptools >= 61.2"]
build-backend = 'setuptools.build_meta'

[project]
name = "nxscli-mpl"
version = "0.5.0"
authors = [{name = "raiden00", email = "raiden00@railab.me"}]
description = "Nxscli Matplotlib extension"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
         "nxscli>=0.5.0",
         "matplotlib>=3.6",
         "click>=8.1"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Embedded Systems",
  "Operating System :: OS Independent",
]
keywords = [
  "nuttx",
  "nxscli",
]

[project.urls]
Changelog = "https://github.com/railab/nxscli-mpl/blob/master/CHANGES.md"
Homepage = "https://github.com/railab/nxscli-mpl"

[project.entry-points."nxscli.extensions"]
plugins = "nxscli_mpl.ext_plugins"
commands = "nxscli_mpl.ext_commands"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79